# SEI-X

./: .env.example  .env.production.example  .gitignore  COMMERCIAL_USE_CASES.md  CREATIVE_SEO_FEATURES.md  DEBUG_AND_DEVELOP.md  DISCOVERY_SUMMARY.md  DOCUMENTATION_TODO.md  Dockerfile  Dockerfile.minimal  Dockerfile.production  FEATURE_IMPLEMENTATION_ROADMAP.md  GEMINI_REVIEW_STATUS.md  HANDOFF.md  IMPLEMENTATION_STATUS.md  PLATFORM_COMPLETENESS_ANALYSIS.md  PLATFORM_IMPLEMENTATION_PLAN.md  PRODUCTION_READINESS.md  PRODUCTION_ROADMAP.md  PR_CHECKLIST.md  PR_DESCRIPTION.md  README.md  README_features.md  REFACTORING_AUDIT.md  SECURITY_AUDIT_REPORT.md  SECURITY_IMPLEMENTATION_GUIDE.md  UPGRADE_SUMMARY.md  USE_CASE_IMPLEMENTATION_ROADMAP.md  demo.py  docker-compose.minimal.yml  docker-compose.production.yml  docker-compose.yml  go.mod  install.ps1  install.sh  package-lock.json  package.json  pyproject.toml  requirements.minimal.txt  requirements.txt  (+2 more)
.github/workflows/: ci-cd.yml
admin-dashboard/: package.json
database/: schema.sql
demo/: index.html  quickstart.py
k8s/: deployment.yaml
scripts/: deploy.sh  generate_secrets.sh
sdk/go/: siex.go
sie_x/: __init__.py  arcitechture.txt  projec_packager.py  project_builder.py  project_packager.py  usecase.py
sie_x/agents/: autonomous.py
sie_x/api/: README.md  __init__.py  routes.py  (+7 more)
terraform/: README_structure.md
transformers/: financial_transformer.py  legal_transformer.py  loader.py  medical_transformer.py
use_cases/: 01_seo_content_optimization.md  02_ai_content_generation.md  03_link_building_outreach.md
(+57 files in other folders)
